[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plan-usage"
version = "0.1.1"
description = "Check your Claude plan usage limits from the terminal — no more switching to the desktop app"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Aakash Chavash", email = "craakash@users.noreply.github.com" }]
readme = "README.md"
keywords = ["claude", "anthropic", "usage", "cli", "rate-limits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/craakash/claude-plan-usage"
Issues = "https://github.com/craakash/claude-plan-usage/issues"

[project.scripts]
claude-plan-usage = "claude_usage.cli:main"
